# mcp_workflow

./: .env.example  .gitignore  README.md  pyproject.toml
src/ability/module/: bitget_trader.py
src/core/: langchain_agent.py  logger.py  mcp_client.py  mcp_server.py
src/core/mcp_tools/: bitget_tools.py  crypto_news_tools.py  onchain_analysis_tools.py  social_sentiment_tools.py  technical_analysis_tools.py
src/operator/crypto_research/: workflow.py
src/operator/crypto_research/roles/: base.py  listener.py  planner.py  replier.py  reporter.py  researcher.py  reviewer.py
src/test/: test.ipynb
